bfs_shell: Fixed (missing) use of the FSSH_B_PRI* macros.

* This closes ticket #12657.